--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Pagina para calcular PL entera con metodo de ramificacion y acotacion">
   <title>Calculador de PL con ramificación y acotación</title>
-  <link rel="stylesheet" href="style.css">
+  <!--<link rel="stylesheet" href="style.css">-->
 </head>
 
 <body>
