--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     .duration(500)
     .style("opacity", 1);
 </script>
-
+<script src="https://d3js.org/d3.v7.min.js"></script>
 </body>
 
 </html>
