--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
   <div class="form-row" class="resultado">
     <label for="variables">Ingrese la cantidad de variables:</label>
-    <input type="text" id="variables" placeholder="Cantidad de variables (entero)" required>
+    <input type="text" id="variables" placeholder="Cantidad de variables (entero)" required style="width: 300px;">
   </div>
 
   <div class="form-row" class="resultado">
     <label for="restricciones">Ingrese la cantidad de restricciones:</label>
-    <input type="text" id="restricciones" placeholder="Cantidad de restricciones (entero)" required>
+    <input type="text" id="restricciones" placeholder="Cantidad de restricciones (entero)" required style="width: 300px;">
   </div>
 
   <div class="form-row" class="resultado">
